--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "iphone-render",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
